syntax = "proto3";

option go_package = "./client";

service Client {
    rpc Create(CreateReq) returns (stream CreateRes) {}
}

message CreateReq {
    bytes files = 1;
    string path = 2;
    uint32 replicationTarget = 3;
    uint32 blockSplitTarget = 4;
    uint64 leaseTimeInSec = 5;
}

message CreateRes {
    uint32 progress = 1;
}